# WhatCat

./: .gitignore  README.md  enviroment.yml  miner.txt  pyproject.toml  todo.txt
md/: PL-md-before-lig-rework.ipynb  PL-md.ipynb  PL-md.py  aligned_avg_traj.dcd  interaction-test.ipynb  ligands.json  molecule_inspector.ipynb  old code.ipynb  output_with_charges.sdf  plip-test.ipynb  restart_openmm.ipynb  run_md.sh
md/example-code/: interaction-stolen.ipynb  toolkit_showcase.ipynb
md/utils/: analysis.py  plot.py  utils.py
miner/: 1be0.pdbqt  1be0_rigid.pdbqt  1cqw-prep_rigid.pdbqt  EtOH.pdbqt  EtOH.sdf  miner.ipynb
miner/caver/: config_default.txt
miner/caverdock-1.2/: caverdock.bashrc
miner/old code/: ProteinTunnelAnalyzer.ipynb  Untitled-1.ipynb  miner-CGAL.ipynb  miner-old-caver-and-caverdock.ipynb  miner-old.ipynb  miner-unweighted.ipynb  miner-voronoi.ipynb  old code.py  whole_clustering.csv  wrapper.ipynb
miner/old code/c_utils/: CMakeLists.txt  voronoi_cgal.cpp
miner/tmp6azkt48q/: log.txt
miner/tmp6shbty4l/: config.txt  log.txt  warnings.txt
miner/tmp7faqw1wb/: config.txt  log.txt  summary.txt  summary_precise_numbers.csv  whole_clustering.csv
miner/tmp8wl31zcu/: config.txt  log.txt  summary.txt  summary_precise_numbers.csv  whole_clustering.csv
miner/tmpcwqu_r32/: config.txt  log.txt  summary.txt  summary_precise_numbers.csv  whole_clustering.csv
miner/tmplwlg_h2o/: config.txt  log.txt  summary.txt  summary_precise_numbers.csv  whole_clustering.csv
miner/tmpnkq6ftw1/: config.txt  log.txt  summary.txt
miner/tmpq5r72nz9/: config.txt  log.txt  summary.txt  whole_clustering.csv
miner/tmpqktce86i/: log.txt  summary_precise_numbers.csv
miner/tmpt50wtici/: log.txt  summary_precise_numbers.csv  whole_clustering.csv
miner/utils/: utils.py
unit_tests/: 6sq8-lig.sdf
whatcat/md/: md.py  (+3 more)
(+225 files in other folders)
